# ArduinoCore-zephyr

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Kconfig  README.gsoc.md  README.md  boards.txt  expand.py  platform.txt  post_install.sh  programmers.txt  west.yml
.github/: dependabot.yml
.github/workflows/: build.yml  format_check.yml  leave_pr_comment.yml  license_check.yml  package_core.yml  package_tool.yml  pr-comment.yml  report_size_deltas.yml  scancode.yml  upload_json.yml
cores/: CMakeLists.txt
cores/arduino/: Arduino.h  CMakeLists.txt  DebugLog.h  SerialUSB.h  Tone.cpp  USB.cpp  WInterrupts.cpp  abi.cpp  dt_connector.h  dt_user_pins.h  inlines.h  llext_wrappers.c  main.cpp  new.h  overloads.h  pins_arduino.h  time_macros.h  wiring_analog.cpp  wiring_digital.cpp  wiring_private.h  wiring_pulse.cpp  wiring_shift.cpp  zephyrClockInit.hpp  zephyrCommon.cpp  zephyrInternal.h  zephyrPinctrl.cpp  zephyrPinctrl.h  zephyrSerial.cpp  zephyrSerial.h
documentation/: configuration-guide.md  configuration-reference.md  dynamic_pinmux.md  variants.md
extra/: bootstrap.sh  build.sh  build_all.sh  ci_apply_tests.sh  ci_calc_size_reports.py  ci_clang_check.sh  ci_collect_data.py  ci_dependabot_config.sh  ci_fetch_tests.sh  ci_generate_report.py  ci_inspect_logs.py  ci_shared.py  ci_test_list.sh  debug.conf  functions  gen_arduino_files.cmake  gen_package_index_json.sh  gen_provides.py  get_board_details.sh  get_core_version.sh  get_variant_name.sh  install_pyocd.sh  install_remoteocd.sh  package_core.sh  package_tool.sh  zephyr-core-template.json
extra/artifacts/: _common.exc  _common.inc  _common.json  _common.test_setup.sh  zephyr_contrib.exc  zephyr_contrib.test_setup.sh  zephyr_main.only  zephyr_main.test_setup.sh  zephyr_unoq.exc  zephyr_unoq.json  zephyr_unoq.only  zephyr_unoq.test_setup.sh
extra/gen-rodata-ld/: main.go
extra/post_build_tool/: zephyr-post-build-tool
extra/sync-zephyr-artifacts/: main.go
extra/zephyr-sketch-tool/: main.go
firmwares/: zephyr-arduino_giga_r1_m7.elf  zephyr-arduino_giga_r1_stm32h747xx_m7.elf  zephyr-arduino_giga_r1_stm32h747xx_m7.hex  zephyr-arduino_nano_33_ble_nrf52840_sense.hex  zephyr-arduino_nano_33_ble_sense.elf  zephyr-arduino_nicla_sense_me_nrf52832.elf  zephyr-arduino_nicla_sense_me_nrf52832.hex  zephyr-arduino_portenta_c33_r7fa6m5bh3cfc.hex  zephyr-arduino_portenta_h7.elf  zephyr-arduino_portenta_h7_stm32h747xx_m7.hex  zephyr-ek_ra8d1.elf  zephyr-ek_ra8d1.hex  zephyr-ek_ra8d1_r7fa8d1bhecbd.elf  zephyr-ek_ra8d1_r7fa8d1bhecbd.hex  zephyr-frdm_mcxn947_mcxn947_cpu0.elf  zephyr-frdm_mcxn947_mcxn947_cpu0.hex  zephyr-frdm_rw612_rw612.hex
libraries/: CMakeLists.txt
libraries/Arduino_LED_Matrix/: library.properties
libraries/CAN/: CAN.cpp  CAN.h  CMakeLists.txt
libraries/PDM/: library.properties
libraries/RTC/: RTC.cpp  RTC.h
libraries/SPI/: SPI.cpp  SPI.h
libraries/SocketWrapper/: SocketHelpers.cpp  SocketHelpers.h  SocketWrapper.h  ZephyrClient.h  ZephyrSSLClient.cpp  ZephyrSSLClient.h  ZephyrServer.h  ZephyrUDP.h
libraries/Wire/: Wire.cpp  Wire.h
libraries/ea_malloc/: LICENSE  ea_malloc.h  ll.h  malloc_freelist.c
libraries/stubs/: Arduino_RouterBridge.h
loader/: CMakeLists.txt  Kconfig  bootanimation.h  fixups.c  llext_exports.c  main.c  matrix.inc  prj.conf
loader/blobs/: 4343WA1_bin.c  4343WA1_bin_qspi.c  CMakeLists.txt  c33_bl.md
samples/blinky_arduino/: README.rst
tools/bin2uf2/: go.mod  main.go
tools/gen-rodata-ld/: README.md  go.mod  main.go
tools/sync-zephyr-artifacts/: go.mod  go.sum  main.go
tools/zephyr-check-size/: .gitignore  go.mod  main.go
tools/zephyr-sketch-tool/: main.go  ota.go
variants/_ldscripts/: build-dynamic.ld  build-rodata.ld  build-static.ld  memory-check.ld  memory-static.ld
variants/arduino_giga_r1_m7/: includes.txt
variants/arduino_giga_r1_stm32h747xx_m7/: arduino_giga_r1_stm32h747xx_m7.conf  arduino_giga_r1_stm32h747xx_m7.overlay  cflags.txt  cxxflags.txt  provides.ld  pure_analog_pins.cpp  pure_analog_pins.h  skip_these_examples.txt  test_setup.sh  variant.h
variants/arduino_nano_33_ble/: arduino_nano_33_ble.overlay
variants/arduino_nano_33_ble_nrf52840_sense/: arduino_nano_33_ble_nrf52840_sense.conf  cflags.txt  (+8 more)
zephyr/: module.yml
(+1137 files in other folders)
